Refactorizando codigo